dist/1.0/bin/sample/retrieveUnpackaged/objects/Bandwidth_Quotation__c.object
<CustomObject>
    <description>Pricing for single Bandwidth selected on Request</description>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <description>Bandwidth</description>
        <inlineHelpText>Bandwidth</inlineHelpText>
        <label>Bandwidth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Costs_1__c</fullName>
        <description>Monthly Recurring Costs 1st column</description>
        <inlineHelpText>Monthly Recurring Costs 1st column</inlineHelpText>
        <label>Monthly Recurring Costs 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Costs_2__c</fullName>
        <description>Monthly Recurring Costs 2nd column</description>
        <inlineHelpText>Monthly Recurring Costs 2nd column</inlineHelpText>
        <label>Monthly Recurring Costs 2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Costs_3__c</fullName>
        <description>Monthly Recurring Costs 3rd column</description>
        <inlineHelpText>Monthly Recurring Costs 3rd column</inlineHelpText>
        <label>Monthly Recurring Costs 3</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Costs_1__c</fullName>
        <description>Non Recurring Costs 1st column</description>
        <inlineHelpText>Non Recurring Costs 1st column</inlineHelpText>
        <label>Non Recurring Costs 1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Costs_2__c</fullName>
        <description>Non Recurring Costs 2nd column</description>
        <inlineHelpText>Non Recurring Costs 2nd column</inlineHelpText>
        <label>Non Recurring Costs 2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Recurring_Costs_3__c</fullName>
        <description>Non Recurring Costs 3rd column</description>
        <inlineHelpText>Non Recurring Costs 3rd column</inlineHelpText>
        <label>Non Recurring Costs 3</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Quotation__c</fullName>
        <description>Related Request Quotation</description>
        <inlineHelpText>Related Request Quotation</inlineHelpText>
        <label>Request Quotation</label>
        <referenceTo>Request_Quotation__c</referenceTo>
        <relationshipLabel>Pricings per Bandwidth</relationshipLabel>
        <relationshipName>Bandwidths</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected 1st column</description>
        <inlineHelpText>Selected 1st column</inlineHelpText>
        <label>Selected 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected 2nd column</description>
        <inlineHelpText>Selected 2nd column</inlineHelpText>
        <label>Selected 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected 3rd column</description>
        <inlineHelpText>Selected 3rd column</inlineHelpText>
        <label>Selected 3</label>
        <type>Checkbox</type>
    </fields>
    <label>Pricing per Bandwidth</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricings per Bandwidth</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>